# social-behavior-ml

./: .gitignore  README.md  metrics.json  pyproject.toml  requirements.txt
data/: README.md
docs/: 中期检查表_已填写.docx  项目说明与代码导读.docx
examples/: run_numpy_demo.py
src/social_behavior_ml/: __init__.py  data.py  features.py  metrics.py  models.py  train_event_classifier.py  train_link_prediction.py
