[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "social-behavior-ml"
version = "0.1.0"
description = "Graph-based social behavior characterization with PyTorch."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

